--- a/public/shop.html
+++ b/public/shop.html
@@ -1249,10 +1249,8 @@
         /* --- ГЛОБАЛЬНЫЙ ЛОАДЕР --- */
 .global-loader-overlay {
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
     background-color: var(--bg-color);
     z-index: 9998;
     display: flex;
@@ -1268,18 +1266,20 @@
 }
 
 .spinner-container {
-    font-size: 40px;
-    color: var(--primary-color);
-    filter: drop-shadow(0 0 10px rgba(255, 204, 0, 0.4));
-    /* ВАЖНО: Добавляем flex, чтобы иконка центрировалась внутри */
-    display: flex; 
+    width: 50px; /* Задаем явный размер контейнеру */
+    height: 50px;
+    display: flex;
     align-items: center;
     justify-content: center;
+    color: var(--primary-color);
+    filter: drop-shadow(0 0 10px rgba(255, 204, 0, 0.4));
 }
 
-/* 🔥 ПРИНУДИТЕЛЬНАЯ АНИМАЦИЯ 🔥 */
 .spinner-container i {
-    animation: global-spin 1s linear infinite;
+    font-size: 40px;
+    display: block; /* ВАЖНО: без этого не крутится! */
+    will-change: transform; /* Подсказка браузеру */
+    animation: global-spin 1s linear infinite !important; /* Принудительно */
 }
 
 @keyframes global-spin {
@@ -1292,7 +1292,7 @@
 
     <div id="global-loader" class="global-loader-overlay">
     <div class="spinner-container">
-        <i class="fa-solid fa-circle-notch fa-spin"></i>
+        <i class="fa-solid fa-circle-notch"></i>
     </div>
 </div>
     <div class="shop-header">
