--- a/public/profile.html
+++ b/public/profile.html
@@ -1094,11 +1094,11 @@ try {
         return `<div class="notify-item"><div class="notify-item-left"><span class="notify-label">${title}</span><span class="notify-sub">${sub}</span></div><div class="notify-item-right"><label class="toggle-switch"><input type="checkbox" class="toggle-input" data-key="${key}" ${isChecked ? 'checked' : ''}><span class="slider"></span></label><button class="test-text-btn" data-type="${key}">📩 Тест</button></div></div>`;
     }
 
-    // --- Global Listeners ---
+   // --- Global Listeners ---
     document.body.addEventListener('click', async (e) => {
         const target = e.target;
 
-        // --- Старые проверки (копирование, трейд-ссылка и т.д.) ---
+        // --- Старые проверки ---
         if (target.closest('#edit-trade-link-btn')) { dom.popupTradeLinkInput.value = document.getElementById('trade-link-display').textContent; dom.customPopupOverlay.classList.add('visible'); return; }
         if (target.closest('#unlink-twitch-btn')) { showCustomConfirmHTML("Отвязать Twitch?", async (c)=>{ await makeApiRequest('/api/v1/user/twitch/unlink'); main(); c(); }, 'Отвязать'); return; }
         
@@ -1127,16 +1127,20 @@ try {
         // --- ЛОГИКА КНОПКИ "ОТКРЫТЬ HATELAVKA" ---
         const promoBtn = target.closest('#send-promo-cmd');
         if (promoBtn) {
-            // 1. Пытаемся отправить текст (сработает ТОЛЬКО если открыто через кнопку меню клавиатуры)
+            // Опционально: вибрация при нажатии
+            tg.HapticFeedback.impactOccurred('medium');
+
+            // 1. Пытаемся отправить чистую команду /promo (Сработает только в "Меню-кнопке")
             try {
-                tg.sendData("❤️Активировать промокод");
+                tg.sendData("/promo");
             } catch (e) {
-                console.log("sendData не сработал (это нормально для inline-режима)");
+                // Игнорируем ошибку, так как это ожидаемо для инлайн-режима
             }
 
-            // 2. ЗАПАСНОЙ ВАРИАНТ (Гарантированно работает)
+            // 2. ЗАПАСНОЙ ВАРИАНТ (Ссылка)
             // Мы открываем бота с параметром start=promo.
-            // Бот получит сообщение: "/start promo"
+            // В чат отправится сообщение: "/start promo"
+            // В коде бота нужно добавить обработку этого аргумента.
             setTimeout(() => {
                 tg.openTelegramLink("https://t.me/HATElavka_bot?start=promo");
             }, 50);
