--- a/public/profile.html
+++ b/public/profile.html
@@ -1127,22 +1127,23 @@ try {
         // --- ЛОГИКА КНОПКИ "ОТКРЫТЬ HATELAVKA" ---
         const promoBtn = target.closest('#send-promo-cmd');
         if (promoBtn) {
-            // Опционально: вибрация при нажатии
             tg.HapticFeedback.impactOccurred('medium');
 
-            // 1. Пытаемся отправить чистую команду /promo (Сработает только в "Меню-кнопке")
+            // 1. Попытка отправить данные (если кнопка Меню)
             try {
                 tg.sendData("/promo");
+                // Если сработало — приложение закроется само.
             } catch (e) {
-                // Игнорируем ошибку, так как это ожидаемо для инлайн-режима
+                // Игнорируем ошибку
             }
 
-            // 2. ЗАПАСНОЙ ВАРИАНТ (Ссылка)
-            // Мы открываем бота с параметром start=promo.
-            // В чат отправится сообщение: "/start promo"
-            // В коде бота нужно добавить обработку этого аргумента.
+            // 2. ЗАПАСНОЙ ВАРИАНТ + ПРИНУДИТЕЛЬНОЕ ЗАКРЫТИЕ
             setTimeout(() => {
+                // Открываем бота с командой
                 tg.openTelegramLink("https://t.me/HATElavka_bot?start=promo");
+                
+                // 🔥 ГЛАВНОЕ ИЗМЕНЕНИЕ: Закрываем окно приложения принудительно
+                tg.close(); 
             }, 50);
             
             return; 
