--- a/public/profile.html
+++ b/public/profile.html
@@ -1129,21 +1129,20 @@ try {
         if (promoBtn) {
             tg.HapticFeedback.impactOccurred('medium');
 
-            // 1. Попытка отправить данные (если кнопка Меню)
+            // 1. Попытка отправить данные
+            // Если сработает (в Меню-кнопке) — приложение свернется само.
             try {
                 tg.sendData("/promo");
-                // Если сработало — приложение закроется само.
             } catch (e) {
                 // Игнорируем ошибку
             }
 
-            // 2. ЗАПАСНОЙ ВАРИАНТ + ПРИНУДИТЕЛЬНОЕ ЗАКРЫТИЕ
+            // 2. ЗАПАСНОЙ ВАРИАНТ (Без принудительного закрытия)
             setTimeout(() => {
-                // Открываем бота с командой
+                // Просто пытаемся переключить фокус на бота
                 tg.openTelegramLink("https://t.me/HATElavka_bot?start=promo");
                 
-                // 🔥 ГЛАВНОЕ ИЗМЕНЕНИЕ: Закрываем окно приложения принудительно
-                tg.close(); 
+                // tg.close(); <--- Я УБРАЛ ЭТУ СТРОКУ
             }, 50);
             
             return; 
