--- a/public/menu.html
+++ b/public/menu.html
@@ -33,9 +33,13 @@
   <link rel="stylesheet" href="/menu.css?v=2" />
 </head>
 <body>
-  <div id="loader-overlay" class="loader-overlay">
+  <div id="loader-overlay" style="display: flex; flex-direction: column; align-items: center; justify-content: center; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: #000; z-index: 9999;">
     <div class="spinner"></div>
-  </div> 
+    <div id="loading-text" style="color: #fff; margin-top: 15px; font-family: sans-serif; font-weight: bold; font-size: 18px;">0%</div>
+    <div style="width: 200px; height: 4px; background: #333; border-radius: 2px; margin-top: 10px; overflow: hidden;">
+        <div id="loading-bar-fill" style="width: 0%; height: 100%; background: #007aff; transition: width 0.3s ease;"></div>
+    </div>
+</div>
 
   <main id="main-content" class="main-content">
 
