--- a/public/menu.html
+++ b/public/menu.html
@@ -392,7 +392,7 @@
 
   <div id="gift-container" class="gift-container hidden">
     <div class="gift-box-wrapper">
-        <div class="gift-message">Тыкни меня! 👇</div>
+        <div class="gift-message">Тыкни на меня! 👇</div>
         <img src="https://cdn-icons-png.flaticon.com/512/4213/4213650.png" alt="Gift" class="gift-icon" id="gift-icon-btn">
     </div>
 </div>
