--- a/public/menu.html
+++ b/public/menu.html
@@ -39,6 +39,9 @@
 </div>
 
   <main id="main-content" class="main-content">
+    
+    <div id="pull-to-refresh">
+        <i class="fa-solid fa-rotate-right"></i> </div>
 
     <div class="start-tutorial-btn-wrapper" style="gap: 10px; display: flex; justify-content: center; width: 100%;">
         <button id="open-bonus-btn" class="hidden" style="background: rgba(255, 215, 0, 0.15); color: #FFD700; border: 1px solid #FFD700; padding: 8px 16px; border-radius: 16px; font-size: 12px; font-weight: 600; cursor: pointer; display: inline-flex; align-items: center; gap: 6px;">
