--- a/public/menu.html
+++ b/public/menu.html
@@ -401,7 +401,9 @@
 </div>
 
 <div id="gift-modal-overlay" class="prompt-overlay hidden" style="z-index: 9999;">
-    <div class="prompt-modal gift-modal-content">
+    <div class="prompt-modal gift-modal-content" style="position: relative;">
+        
+        <button id="gift-x-btn" class="gift-modal-close-x">&times;</button>
         <div id="gift-content-initial">
             <h2 style="margin-top:0; color:#FFD700;">🎄 Ежедневный Подарок!</h2>
             <p>Открой коробку и забери случайную награду.</p>
