--- a/public/auction.html
+++ b/public/auction.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="/public/auction.css" />
 </head>
 <body>
+    <main id="main-content">
+    <div id="pull-to-refresh">
+        <i class="fa-solid fa-rotate-right"></i>
+    </div>
     <div id="loader-overlay" class="loader-overlay hidden">
         <div class="spinner"></div>
     </div>
@@ -75,6 +79,7 @@
             </div>
         </div>
     </div>
+    </main>
 
     <div id="bids-history-modal" class="modal-overlay hidden">
         <div class="modal-content">
