--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -512,7 +512,7 @@
     }
   }
   
-  d// --- ОБРАБОТЧИКИ КНОПОК С ВИБРАЦИЕЙ ---
+  // --- ОБРАБОТЧИКИ КНОПОК С ВИБРАЦИЕЙ ---
 
   dom.sourceButtons.forEach(button => {
     button.addEventListener('click', () => {
