--- a/public/halloween.html
+++ b/public/halloween.html
@@ -5,7 +5,7 @@
     <title>Ивент-Котел</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+    <link rel="stylesheet" href="/fontawesome/css/all.min.css" />
     <link rel="stylesheet" href="halloween.css">
 </head>
 <body data-theme="halloween">
@@ -197,10 +197,12 @@
             <div class="icon-wrapper"><i class="fa-solid fa-check-double"></i></div>
             <span>Задания</span>
         </a>
+        
         <a href="/menu" class="footer-item">
             <div class="icon-wrapper"><i class="fa-solid fa-house"></i></div>
             <span>Главная</span>
         </a>
+        
         <a href="/events" class="footer-item">
             <div class="icon-wrapper"><i class="fa-solid fa-fire"></i></div>
             <span>Гринд</span>
