--- a/public/halloween.html
+++ b/public/halloween.html
@@ -10,6 +10,8 @@
 </head>
 <body data-theme="halloween">
     
+    <div id="bg-layer" class="bg-layer"></div>
+    <div class="bg-overlay"></div>
     <div id="tutorial-overlay" class="tutorial-overlay hidden"></div>
 
     <div class="particles">
