--- a/public/admin.html
+++ b/public/admin.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 
-    <button id="sleep-mode-toggle" class="sleep-mode-toggle hidden" title="Режим сна">
-        <i class="fa-solid fa-power-off"></i>
+    <button id="sleep-mode-toggle" class="sleep-mode-toggle hidden" title="Технический режим">
+        <i class="fa-solid fa-screwdriver-wrench"></i>
     </button>
 
     <div id="loader-overlay" class="loader-overlay hidden">
