--- a/public/admin.html
+++ b/public/admin.html
@@ -459,13 +459,13 @@
             </div>
 
             <div style="padding: 0 5px 15px 5px;">
-                <a href="/quests" target="_blank" class="admin-action-btn" style="
+                <a href="/quests" class="admin-action-btn" style="
                     text-decoration: none;
                     display: flex;
                     align-items: center;
                     justify-content: center;
                     gap: 8px;
-                    background: linear-gradient(90deg, #9146ff, #6441a5); /* Фиолетовый градиент */
+                    background: linear-gradient(90deg, #9146ff, #6441a5);
                     color: white;
                     font-weight: 600;
                     font-size: 13px;
