--- a/public/quests.html
+++ b/public/quests.html
@@ -69,12 +69,12 @@
     <div class="platform-switch">
         <input type="radio" name="platform" id="switch-twitch" value="twitch" checked>
         <label for="switch-twitch" class="switch-label">
-            <i class="fa-brands fa-twitch"></i> TWITCH
+            <i class="fa-brands fa-twitch"></i> Twitch
         </label>
 
         <input type="radio" name="platform" id="switch-telegram" value="telegram">
         <label for="switch-telegram" class="switch-label">
-            <i class="fa-brands fa-telegram"></i> TELEGRAM
+            <i class="fa-brands fa-telegram"></i> Telegram
         </label>
         
         <div class="switch-slider"></div>
