--- a/public/quests.html
+++ b/public/quests.html
@@ -27,7 +27,7 @@
     }
   </script>
   <link rel="stylesheet" href="/fontawesome/css/all.min.css" />
-  <link rel="stylesheet" href="/menu.css?v=2" />
+  <link rel="stylesheet" href="/quests.css?v=2" />
 </head>
 <body>
   
