--- a/public/quests.html
+++ b/public/quests.html
@@ -106,10 +106,7 @@
                         </div>
                         <span style="font-size: 11px; font-weight: 500;">Подписка</span>
                     </div>
-                    <div style="display: flex; align-items: center; gap: 6px;">
-                        <span style="font-size: 10px; color: #fff; font-weight: 600; opacity: 0.9;">+5</span>
-                        <button id="btn-tg-sub" onclick="updateTelegramStatus()" style="background: #0088CC; border: none; border-radius: 4px; color: #fff; padding: 3px 8px; font-size: 10px; font-weight: 600; cursor: pointer;">ТЫК</button>
-                    </div>
+                    <button id="btn-tg-sub" data-reward="+5 🎟" onclick="updateTelegramStatus()" style="background: #0088CC; border: none; border-radius: 4px; color: #fff; padding: 4px 8px; font-size: 10px; font-weight: 700; cursor: pointer; min-width: 45px;">+5 🎟</button>
                 </div>
 
                 <div id="tg-row-vote" class="tg-row" style="display: flex; align-items: center; justify-content: space-between; background: rgba(255,255,255,0.03); padding: 5px 8px; border-radius: 8px; min-height: 36px;">
@@ -122,12 +119,9 @@
                             <span style="font-size: 9px; color: #888; line-height: 1;">каждые 30 дней</span>
                         </div>
                     </div>
-                    <div style="display: flex; align-items: center; gap: 6px;">
-                        <div style="display: flex; flex-direction: column; align-items: flex-end;">
-                             <span style="font-size: 10px; color: #fff; font-weight: 600; opacity: 0.9;">+10</span>
-                             <span id="tg-vote-timer" class="hidden" style="font-size: 8px; color: #666;">таймер...</span>
-                        </div>
-                        <button id="btn-tg-vote" onclick="doTelegramVote()" style="background: #0088CC; border: none; border-radius: 4px; color: #fff; padding: 3px 8px; font-size: 10px; font-weight: 600; cursor: pointer;">ТЫК</button>
+                    <div style="display: flex; flex-direction: column; align-items: flex-end; gap: 2px;">
+                        <button id="btn-tg-vote" data-reward="+10 🎟" onclick="doTelegramVote()" style="background: #0088CC; border: none; border-radius: 4px; color: #fff; padding: 4px 8px; font-size: 10px; font-weight: 700; cursor: pointer; min-width: 45px;">+10 🎟</button>
+                        <span id="tg-vote-timer" class="hidden" style="font-size: 8px; color: #666;">таймер...</span>
                     </div>
                 </div>
 
@@ -142,10 +136,7 @@
                                 <span style="font-size: 9px; color: #888; line-height: 1;">7 дней фарма</span>
                             </div>
                         </div>
-                        <div style="display: flex; align-items: center; gap: 6px;">
-                             <span style="font-size: 10px; color: #fff; font-weight: 600; opacity: 0.9;">+1/д</span>
-                             <button id="btn-tg-surname" onclick="checkTelegramProfile()" style="background: #0088CC; border: none; border-radius: 4px; color: #fff; padding: 3px 8px; font-size: 10px; font-weight: 600; cursor: pointer;">ТЫК</button>
-                        </div>
+                        <button id="btn-tg-surname" data-reward="+15 🎟" onclick="checkTelegramProfile()" style="background: #0088CC; border: none; border-radius: 4px; color: #fff; padding: 4px 8px; font-size: 10px; font-weight: 700; cursor: pointer; min-width: 45px;">+15 🎟</button>
                     </div>
                     <div style="width: 100%; height: 3px; background: rgba(255,255,255,0.1); border-radius: 2px; overflow: hidden; display: flex;">
                          <div id="tg-surname-fill" style="width: 0%; height: 100%; background: #0088CC;"></div>
@@ -163,10 +154,7 @@
                                 <span style="font-size: 9px; color: #888; line-height: 1;">7 дней фарма</span>
                             </div>
                         </div>
-                        <div style="display: flex; align-items: center; gap: 6px;">
-                             <span style="font-size: 10px; color: #fff; font-weight: 600; opacity: 0.9;">+1/д</span>
-                             <button id="btn-tg-bio" onclick="checkTelegramProfile()" style="background: #0088CC; border: none; border-radius: 4px; color: #fff; padding: 3px 8px; font-size: 10px; font-weight: 600; cursor: pointer;">ТЫК</button>
-                        </div>
+                        <button id="btn-tg-bio" data-reward="+20 🎟" onclick="checkTelegramProfile()" style="background: #0088CC; border: none; border-radius: 4px; color: #fff; padding: 4px 8px; font-size: 10px; font-weight: 700; cursor: pointer; min-width: 45px;">+20 🎟</button>
                     </div>
                     <div style="width: 100%; height: 3px; background: rgba(255,255,255,0.1); border-radius: 2px; overflow: hidden; display: flex;">
                          <div id="tg-bio-fill" style="width: 0%; height: 100%; background: #0088CC;"></div>
@@ -181,7 +169,7 @@
                             </div>
                             <span style="font-size: 11px; font-weight: 500;">Реакции</span>
                         </div>
-                        <span style="font-size: 10px; color: #fff; font-weight: 600; opacity: 0.9;">1/шт</span>
+                        <span style="font-size: 10px; color: #fff; font-weight: 700; opacity: 0.9;">+1 🎟 /шт</span>
                     </div>
                     <div style="width: 100%; height: 3px; background: rgba(255,255,255,0.1); border-radius: 2px; overflow: hidden; display: flex;">
                          <div id="tg-reaction-fill" style="width: 0%; height: 100%; background: #0088CC;"></div>
