--- a/public/quests.html
+++ b/public/quests.html
@@ -133,7 +133,7 @@
                             </div>
                             <div style="display: flex; flex-direction: column; justify-content: center;">
                                 <span style="font-size: 11px; font-weight: 500; line-height: 1.1;">Имя бота в нике</span>
-                                <span style="font-size: 9px; color: #888; line-height: 1;">7 дней фарма</span>
+                                <span style="font-size: 9px; color: #888;">Можно забирать в течении 7 дней ежедневно.</span>
                             </div>
                         </div>
                         <button id="btn-tg-surname" data-reward="+15 🎟" onclick="checkTelegramProfile()" style="background: #0088CC; border: none; border-radius: 4px; color: #fff; padding: 4px 8px; font-size: 10px; font-weight: 700; cursor: pointer; min-width: 45px;">+15 🎟</button>
@@ -151,7 +151,7 @@
                             </div>
                             <div style="display: flex; flex-direction: column; justify-content: center;">
                                 <span style="font-size: 11px; font-weight: 500; line-height: 1.1;">Реф. ссылка в био</span>
-                                <span style="font-size: 9px; color: #888; line-height: 1;">7 дней фарма</span>
+                                <span style="font-size: 9px; color: #888;">Можно забирать в течении 7 дней ежедневно.</span>
                             </div>
                         </div>
                         <button id="btn-tg-bio" data-reward="+20 🎟" onclick="checkTelegramProfile()" style="background: #0088CC; border: none; border-radius: 4px; color: #fff; padding: 4px 8px; font-size: 10px; font-weight: 700; cursor: pointer; min-width: 45px;">+20 🎟</button>
