--- a/public/quests.html
+++ b/public/quests.html
@@ -132,7 +132,7 @@
                                 <i class="fa-solid fa-signature" style="color: #fff; font-size: 10px;"></i>
                             </div>
                             <div style="display: flex; flex-direction: column; justify-content: center;">
-                                <span style="font-size: 11px; font-weight: 500; line-height: 1.1;">Имя бота в нике</span>
+                                <span style="font-size: 11px; font-weight: 500;">Имя бота в нике</span>
                                 <span style="font-size: 9px; color: #888;">Можно забирать в течении 7 дней ежедневно.</span>
                             </div>
                         </div>
@@ -150,7 +150,7 @@
                                 <i class="fa-solid fa-link" style="color: #fff; font-size: 10px;"></i>
                             </div>
                             <div style="display: flex; flex-direction: column; justify-content: center;">
-                                <span style="font-size: 11px; font-weight: 500; line-height: 1.1;">Реф. ссылка в био</span>
+                                <span style="font-size: 11px; font-weight: 500;">Реф. ссылка в био</span>
                                 <span style="font-size: 9px; color: #888;">Можно забирать в течении 7 дней ежедневно.</span>
                             </div>
                         </div>
