--- a/public/quests.html
+++ b/public/quests.html
@@ -131,7 +131,7 @@
                             <div style="width: 22px; height: 22px; background: #0088CC; border-radius: 5px; display: flex; align-items: center; justify-content: center; box-shadow: 0 0 8px rgba(255,255,255,0.15);">
                                 <i class="fa-solid fa-signature" style="color: #fff; font-size: 10px;"></i>
                             </div>
-                            <div style="display: flex; flex-direction: column; justify-content: center;">
+                            <div style="display: flex; flex-direction: column; justify-content: center; align-items: flex-start; text-align: left;">
                                 <span style="font-size: 11px; font-weight: 500;">Имя бота в нике</span>
                                 <span style="font-size: 9px; color: #888;">Можно забирать в течении 7 дней ежедневно.</span>
                             </div>
@@ -149,7 +149,7 @@
                             <div style="width: 22px; height: 22px; background: #0088CC; border-radius: 5px; display: flex; align-items: center; justify-content: center; box-shadow: 0 0 8px rgba(255,255,255,0.15);">
                                 <i class="fa-solid fa-link" style="color: #fff; font-size: 10px;"></i>
                             </div>
-                            <div style="display: flex; flex-direction: column; justify-content: center;">
+                            <div style="display: flex; flex-direction: column; justify-content: center; align-items: flex-start; text-align: left;">
                                 <span style="font-size: 11px; font-weight: 500;">Реф. ссылка в био</span>
                                 <span style="font-size: 9px; color: #888;">Можно забирать в течении 7 дней ежедневно.</span>
                             </div>
