--- a/public/quests.html
+++ b/public/quests.html
@@ -115,8 +115,8 @@
                             <i class="fa-solid fa-square-poll-vertical" style="color: #fff; font-size: 10px;"></i>
                         </div>
                         <div style="display: flex; flex-direction: column; justify-content: center;">
-                            <span style="font-size: 11px; font-weight: 500; line-height: 1.1;">Голосование</span>
-                            <span style="font-size: 9px; color: #888; line-height: 1;">каждые 30 дней</span>
+                            <span style="font-size: 11px; font-weight: 500; line-height: 1.1;">Голосование за канал</span>
+                            <span style="font-size: 9px; color: #888; line-height: 1;"> Награду можно получить каждые 30 дней</span>
                         </div>
                     </div>
                     <div style="display: flex; flex-direction: column; align-items: flex-end; gap: 2px;">
