--- a/public/quests.html
+++ b/public/quests.html
@@ -114,9 +114,9 @@
                         <div style="width: 22px; height: 22px; background: #0088CC; border-radius: 5px; display: flex; align-items: center; justify-content: center; box-shadow: 0 0 8px rgba(255,255,255,0.15);">
                             <i class="fa-solid fa-square-poll-vertical" style="color: #fff; font-size: 10px;"></i>
                         </div>
-                        <div style="display: flex; flex-direction: column; justify-content: center;">
+                        <div style="display: flex; flex-direction: column; justify-content: center; align-items: flex-start; text-align: left;">
                             <span style="font-size: 11px; font-weight: 500; line-height: 1.1;">Голосование за канал</span>
-                            <span style="font-size: 9px; color: #888; line-height: 1;"> Награду можно получить каждые 30 дней</span>
+                            <span style="font-size: 9px; color: #888; line-height: 1;">Награду можно получить каждые 30 дней</span>
                         </div>
                     </div>
                     <div style="display: flex; flex-direction: column; align-items: flex-end; gap: 2px;">
