--- a/public/menu.html
+++ b/public/menu.html
@@ -430,6 +430,6 @@
     </div>
 </div>
 
-  <script src="/public/menu.js"></script>
+  <script src="/public/menu.js?v=4.0"></script>
 </body>
 </html>
