--- a/public/quests.html
+++ b/public/quests.html
@@ -280,6 +280,21 @@
     </div>
   </div>
 
+  <div id="boostPopup" class="popup-overlay" style="display: none;">
+  <div class="popup-content">
+    <h3>⚠️ Внимание!</h3>
+    <p>Вы еще не проголосовали за наш канал. Чтобы продолжить, пожалуйста, отдайте свой голос.</p>
+    
+    <a href="https://t.me/boost/hatelove_ttv" target="_blank" class="boost-link-btn">
+      🚀 Проголосовать за канал
+    </a>
+
+    <button id="closePopupBtn" class="close-btn">
+      Буду знать!
+    </button>
+  </div>
+</div>
+
   <script src="/public/quests.js"></script>
 </body>
 </html>
