--- a/public/quests.html
+++ b/public/quests.html
@@ -134,7 +134,7 @@
                                 <span class="tg-subtitle">Ежедневно (7 дней)</span>
                             </div>
                         </div>
-                       <button id="btn-tg-surname" class="action-btn" data-reward="+5 🎟" onclick="checkTelegramProfile('surname')"> +5 🎟</button>
+                        <button id="btn-tg-surname" class="tg-action-btn" data-reward="+2 🎟" onclick="checkTelegramProfile()">+2 🎟</button>
                     </div>
                     <div class="tg-progress-track">
                         <div id="tg-surname-fill" class="tg-progress-fill"></div>
@@ -150,7 +150,7 @@
                                 <span class="tg-subtitle">Ежедневно (7 дней)</span>
                             </div>
                         </div>
-                        <button id="btn-tg-bio" class="action-btn" data-reward="+5 🎟" onclick="checkTelegramProfile('bio')">+5 🎟</button>
+                        <button id="btn-tg-bio" class="tg-action-btn" data-reward="+2 🎟" onclick="checkTelegramProfile()">+2 🎟</button>
                     </div>
                     <div class="tg-progress-track">
                         <div id="tg-bio-fill" class="tg-progress-fill"></div>
