--- a/public/quests.html
+++ b/public/quests.html
@@ -134,7 +134,7 @@
                                 <span class="tg-subtitle">Ежедневно (7 дней)</span>
                             </div>
                         </div>
-                        <button id="btn-tg-surname" class="tg-action-btn" data-reward="+2 🎟" onclick="document.getElementById('custom-prompt-overlay').classList.remove('hidden'); document.getElementById('prompt-title').innerText = 'Проверка ника';">+2 🎟</button>
+                        <button id="btn-tg-surname" class="tg-action-btn" data-reward="+2 🎟" onclick="checkTelegramProfile('surname')">+2 🎟</button>
                     </div>
                     <div class="tg-progress-track">
                         <div id="tg-surname-fill" class="tg-progress-fill"></div>
@@ -150,7 +150,7 @@
                                 <span class="tg-subtitle">Ежедневно (7 дней)</span>
                             </div>
                         </div>
-                        <button id="btn-tg-bio" class="tg-action-btn" data-reward="+2 🎟" onclick="document.getElementById('custom-prompt-overlay').classList.remove('hidden'); document.getElementById('prompt-title').innerText = 'Проверка био';">+2 🎟</button>
+                        <button id="btn-tg-bio" class="tg-action-btn" data-reward="+2 🎟" onclick="checkTelegramProfile('bio')">+2 🎟</button>
                     </div>
                     <div class="tg-progress-track">
                         <div id="tg-bio-fill" class="tg-progress-fill"></div>
