--- a/public/quests.html
+++ b/public/quests.html
@@ -210,6 +210,20 @@
   </div>
 </div>
 
+  <div id="universal-modal-overlay" class="modal-overlay hidden">
+    <div class="modal-content-card">
+        <div class="modal-header">
+            <h2 id="modal-title" class="modal-title">Задания</h2>
+            <button id="modal-close-btn" class="modal-close-btn">
+                <i class="fa-solid fa-xmark"></i>
+            </button>
+        </div>
+        
+        <div id="modal-cards-container" class="modal-grid">
+            </div>
+    </div>
+</div>
+
   <script src="/public/quests.js"></script>
 </body>
 </html>
