--- a/public/quests.html
+++ b/public/quests.html
@@ -224,6 +224,6 @@
     </div>
 </div>
 
-  <script src="/public/quests.js"></script>
+  <script src="/public/quests.js?v=7"></script>
 </body>
 </html>
