--- a/public/quests.html
+++ b/public/quests.html
@@ -225,5 +225,7 @@
 </div>
 
   <script src="/public/quests.js?v=7"></script>
+
+<script src="/public/quests.js?v=7" defer></script>
 </body>
 </html>
