--- a/public/quests.html
+++ b/public/quests.html
@@ -184,7 +184,7 @@
             <h3 style="margin: 0; font-size: 18px;">📅 Расписание стримов</h3>
             <button id="schedule-modal-close-btn" class="promo-notification-close" style="background: rgba(255,255,255,0.1); width: 30px; height: 30px;">&times;</button>
         </div>
-        <img src="https://i.postimg.cc/NMw2ByPZ/raspisanie-strimov.jpg" alt="Расписание" style="width: 100%; border-radius: 12px; margin-bottom: 20px; box-shadow: 0 4px 15px rgba(0,0,0,0.5);">
+        <img src="https://i.postimg.cc/NMw2ByPZ/raspisanie-strimov.jpg" loading="lazy" alt="Расписание" style="width: 100%; border-radius: 12px; margin-bottom: 20px; box-shadow: 0 4px 15px rgba(0,0,0,0.5);">
         <button onclick="Telegram.WebApp.openLink('https://www.twitch.tv/hatelove_ttv')" class="confirm-btn" style="width: 100%; text-decoration: none; display: flex; align-items: center; justify-content: center; gap: 8px; background-color: #9146ff; color: white; border: none; cursor: pointer; font-size: 14px; font-weight: 600; padding: 12px;">
             <i class="fa-brands fa-twitch"></i> Перейти на канал
         </button>
@@ -231,8 +231,6 @@
             </div>
     </div>
 </div>
-
-  <script src="/public/quests.js?v=7"></script>
 
 <script src="/public/quests.js?v=7" defer></script>
 </body>
