--- a/public/quests.html
+++ b/public/quests.html
@@ -182,7 +182,11 @@
     <div class="prompt-modal" style="width: 90%; max-width: 400px; padding: 20px;">
         <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px;">
             <h3 style="margin: 0; font-size: 18px;">📅 Расписание стримов</h3>
-            <button id="schedule-modal-close-btn" class="promo-notification-close" style="background: rgba(255,255,255,0.1); width: 30px; height: 30px;">&times;</button>
+            
+            <button id="schedule-modal-close-btn" class="modal-close-btn">
+                <i class="fa-solid fa-xmark"></i>
+            </button>
+            
         </div>
         <img src="https://i.postimg.cc/NMw2ByPZ/raspisanie-strimov.jpg" loading="lazy" alt="Расписание" style="width: 100%; border-radius: 12px; margin-bottom: 20px; box-shadow: 0 4px 15px rgba(0,0,0,0.5);">
         <button onclick="Telegram.WebApp.openLink('https://www.twitch.tv/hatelove_ttv')" class="confirm-btn" style="width: 100%; text-decoration: none; display: flex; align-items: center; justify-content: center; gap: 8px; background-color: #9146ff; color: white; border: none; cursor: pointer; font-size: 14px; font-weight: 600; padding: 12px;">
